@@ -1,3 +1,9 @@
+2009-10-07  Marek Safar  <marek.safar@gmail.com>
+
+	* typemanager.cs: Reset object_type.
+	
+	* assign: Made SimpleAssign public.
+
 2009-10-06  Marek Safar  <marek.safar@gmail.com>
 
 	* typemanager.cs, decl.cs, namespace.cs, ecore.cs, class.cs: Pass
